# pyretrosheet

./: .bumpversion.cfg  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: build.yaml
docs/: event_file_spec.txt
pyretrosheet/: __init__.py  __main__.py  load.py  query.py  retrosheet.py
pyretrosheet/models/: __init__.py  base.py  exceptions.py  game.py  game_id.py  play.py  player.py  team.py
pyretrosheet/models/play/: __init__.py  advance.py  description.py  event.py  ignored.py  modifier.py  out.py
pyretrosheet/views/: __init__.py
tests/: conftest.py  test_placeholder.py  testing_data.py
tests/data/: 2022WAS.EVN  2022WAS_1.EVN
tests/integration/: test_all_data.py  test_all_data_loading.py
tests/unit/: test_load.py  test_retrosheet.py
tests/unit/models/: test_game.py  test_game_id.py
tests/unit/models/play/: test_advance.py  test_description.py  test_event.py  test_modifier.py  test_out.py  test_play.py  test_player.py
tests/unit/models/views/: test_views.py
